--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 html,
 body {
   font-size: 16px;
-  font-family: sans-serif;
+  font-family: "Raleway", sans-serif;
   color: #303030;
   width: 100%;
   height: 100vh;
