--- a/src/pages/home/Home.styles.css
+++ b/src/pages/home/Home.styles.css
@@ -32,10 +32,28 @@ div.search-input {
 div.card {
   width: 23%;
   background-color: #fff;
-  padding: 2em;
+  padding: 2em 1.4em;
   margin: 1em;
+  display: flex;
+  align-items: center;
   border-radius: 5px;
   border: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+div.column-left {
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+  margin-right: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+div.column-left img.avatar {
+  max-width: 100%;
 }
 
 @media screen and (max-width: 1400px) {
