--- a/src/pages/home/Home.styles.css
+++ b/src/pages/home/Home.styles.css
@@ -47,13 +47,19 @@ div.column-left {
   height: 100px;
   overflow: hidden;
   margin-right: 1em;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
 }
 
 div.column-left img.avatar {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+div.column-right {
+  width: 50%;
 }
 
 @media screen and (max-width: 1400px) {
